# ml_library

./: CMakeLists.txt
data/: Data.cpp  Data.h
implementations/classification/: logistic_regression.cpp
implementations/classification/data/: classification_data.csv
implementations/clustering/: kmeans_test.cpp
implementations/clustering/data/: five_neighbors.csv  two_neighbors.csv
implementations/regression/: knn_regression.cpp  linear_regression.cpp
implementations/regression/data/: regression_data.csv
metrics/: ClassificationMetrics.cpp  ClassificationMetrics.h  ClusteringMetrics.cpp  ClusteringMetrics.h  Distances.cpp  Distances.h  Metrics.cpp  Metrics.h  RegressionMetrics.cpp  RegressionMetrics.h
models/: Model.cpp  Model.h
models/ensemble/: RandomForest.cpp  RandomForest.h
models/kmeans/: Kmeans.cpp  Kmeans.h
models/knn/: Knn.cpp  Knn.h
models/linear/: LinearModel.cpp  LinearModel.h  Logistic.cpp  Logistic.h  Reg.cpp  Reg.h
utility/: Helpers.cpp  Helpers.h
